samples/_failures_safe/1761346507_0c5bdb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d150ab1.c: In function ‘main’:
./samples/SAFE/__tmp_4d150ab1.c:195:5: error: expected declaration or statement at end of input
  195 |     }
      |     ^
